# ParallelProg_NoiseFilter

./: README.md
Gausian_filter/: CMakeCache.txt  CMakeLists.txt  Gaussian_filter.cpp  Makefile  cmake_install.cmake  pp3
Mean_filter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mean_filter.cpp  pp2
Mediun Filter/: CMakeCache.txt  CMakeLists.txt  MF_Using_Quick_Sort.cpp  Makefile  Median_filter.cpp  cmake_install.cmake  pp1
