cmake_minimum_required(VERSION 2.8)
project( pp3 )
find_package( OpenCV REQUIRED )
add_executable( pp3 pp3.cpp )
target_link_libraries( pp3 ${OpenCV_LIBS} )

if(OPENMP_FOUND)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
